src/test/ui/parser/tag-variant-disr-non-nullary.stderr
error: discriminator values can only be used with a field-less enum
  --> $DIR/tag-variant-disr-non-nullary.rs:3:11
   |
LL |     Red = 0xff0000,
   |           ^^^^^^^^ only valid in field-less enums
LL |     //~^ ERROR discriminator values can only be used with a field-less enum
LL |     Green = 0x00ff00,
   |             ^^^^^^^^ only valid in field-less enums
LL |     Blue = 0x0000ff,
   |            ^^^^^^^^ only valid in field-less enums
LL |     Black = 0x000000,
   |             ^^^^^^^^ only valid in field-less enums
LL |     White = 0xffffff,
   |             ^^^^^^^^ only valid in field-less enums

error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/tag-variant-disr-non-nullary.rs:9:12
   |
LL |     Other (str),
   |            ^^^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `str`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = note: no field of an enum variant may have a dynamically sized type

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
